everything is breaking. work on controller